--- a/IT123P - Course Management Systemm/CSS/adminCors.css
+++ b/IT123P - Course Management Systemm/CSS/adminCors.css
@@ -28,7 +28,8 @@ h3 {
     margin-bottom: 15px;
 }
 
-.input {
+.input,
+.dropdown {
     width: 300px;
     padding: 8px;
     border: 1px solid #ccc;
